--- a/.gitignore
+++ b/.gitignore
@@ -1679,3 +1679,19 @@ SeuratObjects/Seurat_GSM6738792_Chow_6928.RData
 SeuratObjects/seurat_list.RData
 SeuratObjects/combined_seurat_combined_umap_N4_harmony_cca_rcpa-mnn-keepsct-SCVI-intergraed-umap-add-learn2024-03-05-21-23.RData
 code/rstudio.code-workspace
+peers/authtoken.secret
+peers/identity.public
+peers/identity.secret
+peers/metrics.prom
+peers/metricstoken.secret
+peers/planet
+peers/zerotier-one.port
+peers/peers.d/62f865ae71.peer
+peers/peers.d/778cde7190.peer
+peers/peers.d/cafe04eba9.peer
+peers/peers.d/cafe9efeb9.peer
+SeuratObjects/
+plotobject/cluster_scvi_leiden2024-03-07-09-45.RData
+Fru52W.Rds
+RNA_snn_scvi_leiden_res.width_25_height20_2024-03-07-09-42.pdf
+.gitignore
