seurat-scanpy-sce互转

--- a/.gitignore
+++ b/.gitignore
@@ -1727,3 +1727,18 @@ plot/2024-03-09-22-24MouseRNA_SingleR.labels_clustering_comparison.pdf
 Rdata_time/2024年3月11日14-loupe-下游差异火山图分析.RData
 2024-3-11-lcn2-火山图-rstudio.svg
 code/2024-3-11-DE-差异分析-SCT.html
+sceobject/2024-03-13-14-52-SCE-combined_seurat-SCVI-intergraed-umap-add-learn-N4-slm-louvain-muti-leiden_all_joined-tsne-anotated-alltsne.Rdata
+sceobject/2024-03-13-15-44miloobj-all_joined-tsne-anotated-alltsne.Rdata
+sceobject/
+.gitignore
+2024-3-15-细胞比例图v1.png
+2024-3-15-tsne-scvi.tiff
+RNA_snn_hepa_slm_reswidth_25_height16_2024-03-16.pdf
+RNA_snn_monomacro_slm_reswidth_25_height16_2024-03-16.pdf
+Rdata_time/2024年3月16日00点35分.RDataTmp
+2024-3-15-anotated.cloupe
+Rdata_time/2024年3月16日00点35分.RData
+python/scvi_model/model.pt
+python/api_overview.html
+scvi-env-4.tar.gz
+combined_seurat-SCVI-intergraed-umap-add-learn-N4-slm-louvain-muti-leiden_all_joined-tsne-SCVI-sct_2024-03-19.cloupe
